# herdr

./: Cargo.toml
crates/herdr-api/: Cargo.toml
crates/herdr-api/src/: helpers.rs  internal.rs  lib.rs
crates/herdr-runtime/: Cargo.toml
crates/herdr-runtime/src/: config_io.rs  lib.rs  popup.rs  session.rs  terminal_titles.rs  theme_sync.rs
crates/herdr-state/: Cargo.toml
crates/herdr-state/src/: events.rs  lib.rs  popup_size.rs  state.rs  timing.rs  types.rs
crates/herdr-state/src/schema/: agents.rs  common.rs  panes.rs  plugins.rs  response.rs
crates/herdr-test-support/: Cargo.toml
crates/herdr-test-support/src/: app_state.rs  input_context.rs  lib.rs  terminal_runtime.rs  workspace.rs
crates/herdr-tui/: Cargo.toml
crates/herdr-tui/src/: lib.rs
crates/herdr-tui/src/input/: mod.rs
crates/herdr-tui/src/ui/: mod.rs
docs/next/website/src/content/docs/: cli-reference.mdx
src/: agent_resume.rs  events.rs  main.rs  ui.rs
src/api/: mod.rs  schema.rs  server.rs
src/api/schema/: integrations.rs  panes.rs  response.rs
src/app/: actions.rs  api.rs  config_io.rs  mod.rs  runtime.rs  session.rs  state.rs  theme_sync.rs  worktrees.rs
src/app/api/: pane_graphics.rs  panes.rs
src/app/input/: mod.rs  modal.rs  mouse.rs  settings.rs  sidebar.rs  terminal.rs
src/cli/: pane.rs
src/integration/: mod.rs
src/integration/assets/zeroclaw/: herdr-agent-state.ps1  herdr-agent-state.sh
src/pane/: terminal.rs
src/persist/: snapshot.rs
src/server/: headless.rs
src/terminal/: state.rs
src/ui/: mobile.rs  settings.rs  sidebar.rs
