[package]
name = "herdr"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[workspace]
resolver = "2"
members = [
    "crates/herdr-state",
    "crates/herdr-runtime",
    "crates/herdr-api",
    "crates/herdr-tui",
    "crates/herdr-test-support",
]

[workspace.package]
version = "0.7.4"
edition = "2021"
license = "AGPL-3.0-or-later"
repository = "https://github.com/ogulcancelik/herdr"
homepage = "https://herdr.dev"

[workspace.dependencies]
base64 = "0.22.1"
bincode = { version = "2", features = ["serde"] }
bytes = "1"
clap = { version = "4.5", default-features = false, features = ["std"] }
clap_complete = "4.5"
crossterm = "0.29"
ctrlc = "3"
interprocess = "2.4.2"
libc = "0.2"
portable-pty = { version = "=0.9.0", path = "vendor/portable-pty" }
png = "0.17"
ratatui = { version = "0.30", features = ["unstable-rendered-line-info"] }
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
toml = "0.8"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
unicode-width = "0.2"
schemars = { version = "1.2.1", features = ["derive"] }

[patch.crates-io]
portable-pty = { path = "vendor/portable-pty" }

[dependencies]
herdr-state = { path = "crates/herdr-state" }
herdr-runtime = { path = "crates/herdr-runtime" }
herdr-api = { path = "crates/herdr-api" }
herdr-tui = { path = "crates/herdr-tui" }
herdr-test-support = { path = "crates/herdr-test-support" }

base64.workspace = true
bincode.workspace = true
bytes.workspace = true
clap = { workspace = true, default-features = false, features = ["std", "derive", "env"] }
clap_complete.workspace = true
crossterm.workspace = true
ctrlc.workspace = true
interprocess.workspace = true
libc.workspace = true
portable-pty.workspace = true
png.workspace = true
ratatui.workspace = true
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tokio.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
unicode-width.workspace = true
schemars.workspace = true
